# RomanNumeralCalc2ndTry

./: Makefile.am  configure.ac
Source/: Makefile.am  convert.c  convert.h  main.c  romanNumeralCalc.c  romanNumeralCalc.h
Tests/: Makefile.am  check_addAndSub.c  check_addAndSub.h  check_convert.c  check_convert.h  check_romanNumeralCalc.c
