TESTS = check_romanNumeralCalc
check_PROGRAMS = check_romanNumeralCalc
check_romanNumeralCalc_SOURCES = check_convert.c check_addAndSub.c check_romanNumeralCalc.c $(top_builddir)/Source/romanNumeralCalc.h
check_romanNumeralCalc_CFLAGS = @CHECK_CFLAGS@
check_romanNumeralCalc_LDADD = $(top_builddir)/Source/libromanNumeralCalc.la @CHECK_LIBS@